--- a/WPFChart/MainWindow.xaml
+++ b/WPFChart/MainWindow.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="WPFChart.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:chartcontrols="clr-namespace:ChartControls;assembly=ChartControls">
+        xmlns:chartcontrols="clr-namespace:ChartControls;assembly=ChartControls" >
+    
     <Grid>
         <chartcontrols:Chart x:Name="myChart" />
+        <TextBlock Text="{Binding ElementName=myChart, Path=Series[0].Data.Count}" 
+                   VerticalAlignment="Top" HorizontalAlignment="Left"
+                   FontSize="18" Foreground="Black" Background="DarkGray" Padding="4" Opacity="0.5"/>
     </Grid>
 </Window>
