--- a/WPFChart/Themes/DarkTheme.xaml
+++ b/WPFChart/Themes/DarkTheme.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:WPFChart.Themes">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
 
     <SolidColorBrush x:Key="DarkBrush" Color="#111111" />
     <SolidColorBrush x:Key="BlueBrush" Color="#0FC5F5" />
