--- a/ChartControls/Themes/Generic.xaml
+++ b/ChartControls/Themes/Generic.xaml
@@ -2,14 +2,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:ChartControls"
-    xmlns:series="clr-namespace:ChartControls.CommonModels.Series"
     xmlns:controls="clr-namespace:ChartControls.Controls">
 
-    <Style TargetType="{x:Type local:Chart}">
+    <Style TargetType="local:Chart">
         <Setter Property="ClipToBounds" Value="True" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:Chart}">
+                <ControlTemplate TargetType="local:Chart">
                     <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
                         <Grid>
                             <Grid.RowDefinitions>
@@ -23,13 +22,23 @@
 
                             <controls:ChartCanvas x:Name="CHART_CANVAS" Grid.Row="0" Grid.Column="0" />
 
-                            <!--<HorizontalSlider x:Name="HOR_SLIDER" Grid.Row="1" Grid.Column="0" />-->
+                            <controls:HorizontalRangeSlider x:Name="HOR_SLIDER" Grid.Row="1" Grid.Column="0" />
                             <!--<VerticalSlider x:Name="VER_SLIDER" Grid.Row="0" Grid.Column="1" />-->
                         </Grid>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style TargetType="controls:HorizontalRangeSlider">
+        <Setter Property="SliderFill" Value="CornflowerBlue" />
+        
+        <Setter Property="Min" Value="0" />
+        <Setter Property="Max" Value="100" />
+        <Setter Property="From" Value="10" />
+        <Setter Property="To" Value="30" />
+        <Setter Property="Height" Value="20" />
     </Style>
 
 </ResourceDictionary>
