--- a/WPFChart/Themes/DarkTheme.xaml
+++ b/WPFChart/Themes/DarkTheme.xaml
@@ -1,9 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:chartControls="clr-namespace:ChartControls;assembly=ChartControls">
 
     <SolidColorBrush x:Key="DarkBrush" Color="#111111" />
+    <SolidColorBrush x:Key="DarkBlueBrush" Color="#182731" />
+    <SolidColorBrush x:Key="PurpleBrush" Color="#808C9F" />
     <SolidColorBrush x:Key="BlueBrush" Color="#0FC5F5" />
     <SolidColorBrush x:Key="GreenBrush" Color="#0FF904" />
     <SolidColorBrush x:Key="RedBrush" Color="#EE0606" />
-    
+
+    <Style TargetType="chartControls:Chart">
+        <Setter Property="Background" Value="{StaticResource DarkBlueBrush}" />
+    </Style>
+
 </ResourceDictionary>
