Implement chartSettings in Series. Add to horizontal slider ability to stuck Upgrade line series drawing.

--- a/ChartControls/Themes/Generic.xaml
+++ b/ChartControls/Themes/Generic.xaml
@@ -34,6 +34,8 @@
     <Style TargetType="controls:HorizontalRangeSlider">
         <Setter Property="SliderFill" Value="#A56495ED" />
         <Setter Property="Height" Value="35" />
+        <!--<Setter Property="IsStuckToRight" Value="True" />
+        <Setter Property="IsStuckToLeft" Value="True" />-->
     </Style>
 
 </ResourceDictionary>
